@@ -1,3 +1,8 @@
+2019-11-06  Jason Merrill  <jason@redhat.com>
+
+	C++20 NB CA378 - Remove constrained non-template functions.
+	* decl.c (grokfndecl): Reject constraints on non-templated function.
+
 2019-11-06  Matthias Kretz  <m.kretz@gsi.de>
 
 	* parser.c (cp_parser_operator): Parse operator?: as an
